--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "slim/slim-skeleton",
-    "description": "A Slim Framework skeleton application for rapid development",
+    "name": "picsat/slim-covoitCHU",
+    "description": "A Slim Framework App for manage a carpool CHU workers's calendar based on Slim-Skeleton",
     "keywords": ["microframework", "rest", "router", "psr7"],
-    "homepage": "http://github.com/slimphp/Slim-Skeleton",
+    "homepage": "https://github.com/picsat/covoitCHU",
     "license": "MIT",
     "authors": [
         {
-            "name": "Josh Lockhart",
-            "email": "info@joshlockhart.com",
-            "homepage": "http://www.joshlockhart.com/"
+            "name": "Thomas SAN ANDRES",
+            "email": "contact@picsat.fr",
+            "homepage": "https://www.picsat.fr/"
         }
     ],
     "require": {
