--- a/public/.htaccess
+++ b/public/.htaccess
@@ -16,6 +16,10 @@
   # absolute physical path to the directory that contains this htaccess file.
   # RewriteBase /
 
+  RewriteCond %{HTTP:X-Forwarded-Proto} !https
+  RewriteCond %{HTTPS} off
+  RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule ^ index.php [QSA,L]
